0.053	- 2016-07-11,  H.Merijn Brand
    * Add tests for NixOS 16.09
    * Add tests for Fedora-23

0.052	- 2016-07-11,  H.Merijn Brand
    * 0.051 had a version mismatch in the dist file
    * Add tests for CentOS-7.2

0.051	- 2016-05-12,  H.Merijn Brand
    * Add DSM-6.0
    * Test with perl 5.24.0

0.050	- 2016-04-28,  H.Merijn Brand
    * CPANTESTERS PASS'd on 049_01, so release to CPAN

0.043	- 2016-04-24,  H.Merijn Brand
    * Direct extract from System