@@ -139,6 +139,7 @@ t/etc/fedora-23/redhat-release
 t/etc/fedora-23/system-release
 t/etc/fedora-23/system-release-cpe
 t/etc/get-lsb.pl
+t/etc/get-lsb.sh
 t/etc/mageia-4/DISTNAME
 t/etc/mageia-4/issue
 t/etc/mageia-4/lsb-release
@@ -156,6 +157,10 @@ t/etc/netbsd-6.99.24/DISTNAME
 t/etc/netbsd-6.99.24/release
 t/etc/netbsd-7.99.4/DISTNAME
 t/etc/netbsd-7.99.4/release
+t/etc/openelec-6.95.3/DISTNAME
+t/etc/openelec-6.95.3/issue
+t/etc/openelec-6.95.3/os-release
+t/etc/openelec-6.95.3/release
 t/etc/oracle-5.9/DISTNAME
 t/etc/oracle-5.9/enterprise-release
 t/etc/oracle-5.9/issue
