@@ -1,0 +1,6 @@
+##############################################
+#                  OpenELEC                  #
+#             http://openelec.tv             #
+##############################################
+
+OpenELEC (official) Version: 6.95.3
