@@ -1,0 +1,9 @@
+NAME="OpenELEC"
+VERSION="6.95.3"
+ID="openelec"
+VERSION_ID="7.0"
+PRETTY_NAME="OpenELEC (official) - Version: 6.95.3"
+HOME_URL="http://www.openelec.tv"
+BUG_REPORT_URL="https://github.com/OpenELEC/OpenELEC.tv"
+OPENELEC_ARCH="RPi2.arm"
+OPENELEC_BUILD="official"
